# mys-postcode-matrix

./: .env.example  .gitignore  1-posm-vs-postcode.my.ipynb  1.ipynb  1a.ipynb  1b.ipynb  1c.ipynb  2-data-cleaning.ipynb  3-distance-matrix.ipynb  3.ipynb  3a.ipynb  4-google-maps-api.ipynb  4.ipynb  5-time-matrix.ipynb  6-ppv-in-master-postcode.ipynb  README.md  bad_postcode_data.xlsx  ignore_1.ipynb  ignore_2.ipynb  pyproject.toml  requirements.txt
data/: Poscode - Lat Long.sha256  _DATA.md  bad_postcode_data_Thev.sha256  bad_postcode_data_Thev.xlsx  dep_poskod_geo_web.csv  dep_poskod_geo_web.sha256  json_1_states.sha256  posm_coords_not_in_state_geojson.csv  posm_coords_not_in_state_geojson.sha256  revgeo_0_polygon.py
output/: distance-matrix.pkl  distance-matrix.xlsx  distance_matrix.csv  distance_matrix.pickle  master-postcode-pairs.csv  master-postcodes-and-ppvs.xlsx  master-postcodes-ppv-count.xlsx  mpc_pairs.csv  posm-postcodes-check.xlsx  posm-postcodes-core.csv  posm-postcodes-full.pkl  posm-postcodes-full.xlsx  posm_coords_not_in_state_geojson.csv  posm_postcodes-full.xlsx  postcode.my-to-posm.csv  postcode_output.xlsx  time-matrix-minfloored.csv  time-matrix-minfloored.xlsx  time-matrix-pulaupinang-minfloored.csv  time-matrix-sarawak-minfloored.csv  time-matrix-sec-pulaupinang.csv  time-matrix-sec-sarawak.csv  time-matrix-sec.csv  time-matrix-sec.xlsx
responses/: distance-matrix-20210604-234351.json  distance-matrix-20210607-162126-perlis.json  geocode-20210604-215540.json  geocode-20210604-220850.json
script/: setup.ps1
src/: utils.py
(+32 files in other folders)
